--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .btn {
+        @apply bg-red-500 text-white px-1 rounded-md text-sm
+    }
+}
