--- a/client/src/style.css
+++ b/client/src/style.css
@@ -14,6 +14,11 @@
     }
 }
 
+@layer components {
+    .center {
+        @apply flex items-center justify-center h-screen
+    }
+}
 /* @layer base {
     body {
         @apply font-mono
