--- a/client/src/style.css
+++ b/client/src/style.css
@@ -7,8 +7,8 @@
         @apply bg-red-500 text-white px-2 py-1 rounded-md text-sm
     }
 
-    .homepage-spinner {
-        @apply w-2/5 min-h-20 shadow-md shadow-purple-900 rounded-md
+    .homepage-location-window {
+        @apply w-1/4 min-h-24 min-w-16 shadow-md shadow-purple-900 rounded-md 
     }
 }
 @layer base {
