--- a/client/src/style.css
+++ b/client/src/style.css
@@ -8,7 +8,12 @@
     }
 
     .homepage-location-window {
-        @apply w-1/4 min-h-24 min-w-16 shadow-md shadow-purple-900 rounded-md 
+        @apply w-1/4 min-h-24 min-w-16 shadow-md shadow-purple-900 rounded-md mx-4
+    }
+
+    .homepage-search-window {
+        @apply w-1/4 min-h-24 min-w-16 shadow-md shadow-yellow-900 rounded-md 
+        mx-4
     }
 }
 @layer base {
