--- a/client/src/style.css
+++ b/client/src/style.css
@@ -15,6 +15,10 @@
         @apply w-1/4 min-h-24 min-w-16 shadow-md shadow-yellow-900 rounded-md 
         mx-4
     }
+    .homepage-events-window {
+        @apply w-2/5 min-h-24 min-w-16 shadow-md shadow-yellow-500 rounded-md p-3
+        mx-4
+    }
 }
 @layer base {
     h1 {
